# Digits-Recognition

./: .gitignore  Makefile  docker  pyproject.toml  ruff.toml
notenooks/: experiments.ipynb  inference.ipynb
src/digits_recognition/server/: config.py  server.py
src/digits_recognition/types/: server_types.py
src/digits_recognition/ui/: ui.py
tests/: unit_tests.py
